# BOT-Astralle

./: .env.compose.example  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  emoji_map.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/features/auth/: api.py  schemas.py
backend/app/features/discord_bindings/: api.py  models.py  repository.py  schemas.py  service.py
backend/app/features/jobs/: api.py  models.py  repository.py  schemas.py  service.py  workers.py
backend/app/features/leaderboards/: api.py  ingest.py  models.py  repository.py  schemas.py  selectors.py  service.py
backend/app/features/live_games/: api.py  ingest.py  local_champion_map.py  models.py  repository.py  schemas.py  service.py
backend/app/features/matches/: api.py  daily_lp_recap.py  ingest.py  models.py  recap_ingest.py  repository.py  schemas.py  service.py
backend/app/features/publications/: api.py  models.py  repository.py  schemas.py  service.py
backend/app/infra/: cache.py  riot_client.py  scheduler.py
backend/migrations/: README.md
backend/migrations/alembic/: env.py  script.py.mako
backend/tests/: test_auth_session.py  test_leaderboards_selectors.py  test_live_games_service.py  test_matches_ranked_lp.py  test_matches_remake.py  test_scoring_engine.py  test_smoke.py  test_tracked_players_validators.py
backend/tools/: discord_emojis_upload.py
discord/: .dockerignore  Dockerfile  pyproject.toml
discord/app/: main.py
discord/app/core/: backend_client.py  config.py  discord_client.py  emoji_resolver.py  timezones.py
discord/tests/: test_match_analysis.py  test_match_embeds.py  test_smoke.py
(+93 files in other folders)
