[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lol-backend"
version = "0.2.0"
description = "Backend service for the LoL ecosystem"
requires-python = ">=3.12"
dependencies = [
  "uvicorn[standard]>=0.27",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
  "httpx>=0.27",
  "aiohttp>=3.11",
  "pillow>=11.0",

  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",

  "apscheduler>=3.10",
  "fastapi[all]>=0.110",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*"]
