[project]
name = "lol-discord"
version = "0.1.0"
description = "Discord publisher/consumer for the LoL ecosystem"
requires-python = ">=3.12"
dependencies = [
  "discord.py>=2.3",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
